# role-based-rag-chatbot

./: .gitignore  README.md
backend/: .env.example  debug_inspect_chunks.py  ingest.py  pyproject.toml  test_groq.py  test_import.py  test_retrieval.py  test_semantic_accuracy.py
backend/app/: main.py
backend/app/api/: chat.py
backend/app/core/: rbac.py
backend/app/schemas/: chat.py
backend/app/services/: llm_service.py  retrieval_service.py
backend/config/: rbac.yaml
backend/data/engineering/: engineering_overview.md
backend/data/finance/: finance_overview.md
backend/data/hr/: employee_handbook.md  hr_dataset_overview.md
backend/data/marketing/: marketing_overview.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AddUserForm.jsx  Chatbot.jsx  QueryForm.jsx  Sidebar.jsx  UploadForm.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx
frontend/src/services/: api.js
