[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "langchain",
  "langchain-community",
  "chromadb",
  "sentence-transformers",
  "python-jose[cryptography]",
  "passlib[bcrypt]",
  "python-multipart",
  "pydantic-settings",
]
