[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "langchain",
  "langchain-community",
  "chromadb",
  "sentence-transformers",
  "python-jose[cryptography]",
  "passlib[bcrypt]",
  "python-multipart",
  "pydantic-settings",
  "chromadb",
  "pypdf",
  "python-docx",
  "pandas>=2.3.3",
  "unstructured>=0.18.27",
  "markdown>=3.10",
]
